# vc_coder_dev

./: .editorconfig  .env.example  .pre-commit-config.yaml  Agent_Standards_and_Starter_Spec.md  Makefile  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: README.md
backend/agents/coder/: __init__.py  adapter.py  coder_adapter.py  coder_adapter_fake.py  diff_utils.py  prompt_templates.py
backend/agents/github/: __init__.py  config.py  errors.py  github_client.py  github_client_fake.py  integrator.py  pr_body.py
backend/agents/orchestrator/: orchestrator_agent.py  orchestrator_state.py  policies.py  routing.py  serialization.py  service.py  step_lifecycle.py  wiring_demo.py
backend/agents/planner/: prompt_templates.py  service.py  sub_planner_adapter.py  sub_planner_adapter_fake.py
backend/agents/shared/: base_agent.py  errors.py  lifecycle_mixin.py  logging_mixin.py
backend/agents/sub_planner/: __init__.py  service.py
backend/api/: server.py
backend/core/: logging.py
backend/tools/: codex_client.py  github_client.py
core/contracts/: __init__.py  base.py  coder_result.py  events.py  mapping.py  registry.py  transforms.py  validation_report.py  version.py  work_order.py
core/events/: __init__.py  capture.py  publisher.py  types.py
core/store/: memory_repos.py  repositories.py
docs/: RUN_AND_TEST_CODING_AGENTS.md  starter-spec.md
scripts/: demo_happy_path.py  export_demo_run.py  print_contract_schemas.py
tests/integration/: test_demo_happy_path.py
tools/: changed_files.py  run_validators.py
(+38 files in other folders)
